--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -15,7 +15,6 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="#000000"
             android:adjustViewBounds="true"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -23,54 +22,73 @@
 
 
         <androidx.cardview.widget.CardView
-                card_view:layout_constraintTop_toTopOf="parent"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintEnd_toEndOf="parent"
+                android:background="?selectableItemBackground"
+                android:clickable="true"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/cvNews"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="15dp"
-                android:elevation="3dp"
-                card_view:cardCornerRadius="1dp">
+                app:cardElevation="7dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardCornerRadius="10dp">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    card_view:layout_constraintTop_toTopOf="parent"
-                    card_view:layout_constraintStart_toStartOf="parent"
-                    card_view:layout_constraintEnd_toEndOf="parent"
-                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
 
                 <ImageView
+                        android:scaleType="fitXY"
+                        android:img="@{newsViewModel.urlToImage}"
                         android:id="@+id/imgBanner"
-                        card_view:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="match_parent"
-                        android:layout_height="150dp"/>
+                        android:layout_height="250dp"/>
+
 
 
                 <TextView
-
-                        android:text="@{newsViewModel.author}"
-                        card_view:layout_constraintBottom_toBottomOf="parent"
-                        card_view:layout_constraintStart_toStartOf="parent"
-                        card_view:layout_constraintTop_toBottomOf="@id/imgBanner"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:padding="15dp"
+                        android:textColor="#FFFFFF"
+                        android:alpha="0.6"
+                        android:background="#000000"
+                        android:textStyle="bold"
+                        android:textSize="23dp"
+                        android:text="@{newsViewModel.title}"
+                        app:layout_constraintBottom_toBottomOf="@id/imgBanner"
                         android:id="@+id/txtNewsName"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
                         />
 
                 <TextView
+                        android:padding="10dp"
+                        android:textSize="18dp"
                         android:id="@+id/txtNewsAuthor"
-                        card_view:layout_constraintBottom_toBottomOf="parent"
-                        android:text="@{newsViewModel.title}"
-                        card_view:layout_constraintEnd_toEndOf="parent"
-                        card_view:layout_constraintTop_toBottomOf="@id/imgBanner"
-                        android:layout_width="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:text="@{newsViewModel.description}"
+                        app:layout_constraintStart_toStartOf="@id/txtNewsName"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/imgBanner"
+                        android:layout_width="0dp"
+                        android:maxLines="3"
+                        android:ellipsize="end"
                         android:layout_height="wrap_content"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
