--- a/app/src/main/res/layout/activity_github.xml
+++ b/app/src/main/res/layout/activity_github.xml
@@ -35,6 +35,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+                app:setAdapter="@{newsViewModel.adapter}"
                 android:id="@+id/rvNews"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btnNews"
