--- a/app/src/main/res/layout/activity_pin_code.xml
+++ b/app/src/main/res/layout/activity_pin_code.xml
@@ -18,29 +18,38 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-                app:setAdapterHorizontal="@{pincodeViewModel.adapter}"
                 android:id="@+id/rvPinCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/pincode_list_item"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                app:setAdapterHorizontal="@{pincodeViewModel.adapter}"
+                tools:listitem="@layout/pincode_list_item" />
 
 
         <EditText
-                app:layout_constraintStart_toStartOf="parent"
                 android:id="@+id/edtPinCode"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="30dp"
                 android:inputType="number"
                 android:maxLength="@{pincodeViewModel.maxPin}"
                 android:text="@={pincodeViewModel.pincode}"
-                android:layout_marginTop="30dp"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={pincodeViewModel.pincode}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rvPinCode" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
