add SingleLiveEvent to prevent twice observe from MutableLiveData

--- a/app/src/main/res/layout/activity_pin_code.xml
+++ b/app/src/main/res/layout/activity_pin_code.xml
@@ -7,14 +7,14 @@
 
         <variable
                 name="pincodeViewModel"
-                type="com.mobile.tr.poc.koin.ui.pincode.PinCodeViewModel" />
+                type="com.mobile.tr.poc.koin.ui.pincode.presenter.PinCodeViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.pincode.PinCodeActivity">
+            tools:context=".ui.pincode.presenter.PinCodeActivity">
 
 
         <androidx.recyclerview.widget.RecyclerView
