--- a/app/src/main/res/drawable/pin_circle.xml
+++ b/app/src/main/res/drawable/pin_circle.xml
@@ -4,13 +4,13 @@
         android:shape="oval">
 
     <solid
-            android:color="#FFFFFF"/>
+            android:color="@color/white"/>
 
     <size
-            android:width="15dp"
-            android:height="15dp"/>
+            android:width="16dp"
+            android:height="16dp"/>
 
     <stroke
             android:width="1dp"
-            android:color="#F37021"/>
+            android:color="@color/orange"/>
 </shape>
