add new approach >> databinding vm onclick, sharedviewmodel btw activity

--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -4,10 +4,13 @@
 
     <data>
 
+        <variable
+                name="position"
+                type="java.lang.Integer" />
 
         <variable
                 name="newsViewModel"
-                type="com.mobile.tr.poc.koin.ui.news.domain.model.ArticlesItem" />
+                type="com.mobile.tr.poc.koin.ui.news.presenter.NewsViewModel" />
 
     </data>
 
@@ -19,13 +22,14 @@
 
 
         <androidx.cardview.widget.CardView
+                android:onClick="@{() -> newsViewModel.onItemClick(position)}"
                 android:background="?selectableItemBackground"
                 android:clickable="true"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/cvNews"
+                android:id="@+id/btnNews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -46,7 +50,7 @@
 
                 <ImageView
                         android:scaleType="fitXY"
-                        android:img="@{newsViewModel.urlToImage}"
+                        android:img="@{newsViewModel.getNews(position).urlToImage}"
                         android:id="@+id/imgBanner"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +70,7 @@
                         android:background="#000000"
                         android:textStyle="bold"
                         android:textSize="23dp"
-                        android:text="@{newsViewModel.title}"
+                        android:text="@{newsViewModel.getNews(position).title}"
                         app:layout_constraintBottom_toBottomOf="@id/imgBanner"
                         android:id="@+id/txtNewsName"
                         android:layout_width="match_parent"
@@ -79,7 +83,7 @@
                         android:textSize="18dp"
                         android:id="@+id/txtNewsAuthor"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:text="@{newsViewModel.description}"
+                        android:text="@{newsViewModel.getNews(position).description}"
                         app:layout_constraintStart_toStartOf="@id/txtNewsName"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/imgBanner"
