--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -15,22 +15,194 @@
             tools:context=".ui.newsdetails.presenter.NewsDetailActivity">
 
 
-        <ImageView
-                android:scaleType="fitXY"
-                app:layout_constraintTop_toTopOf="parent"
-                android:img="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).urlToImage}"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"/>
 
-        <TextView
-                android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).title}"
-                android:id="@+id/txtTitle"
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true">
+
+            <com.google.android.material.appbar.AppBarLayout
+                    android:id="@+id/appbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fitsSystemWindows="true"
+                    android:theme="@style/AppTheme.AppBarOverlay">
+
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                        android:id="@+id/collapsing_toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:fitsSystemWindows="true"
+                        app:contentScrim="@color/colorAccent"
+                        app:expandedTitleGravity="bottom"
+                        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+
+
+
+
+
+                    <ImageView
+                            app:layout_collapseMode="parallax"
+                            android:id="@+id/toolbar_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:contentDescription="@null"
+                            android:fitsSystemWindows="true"
+                            android:scaleType="fitXY"
+                            android:img="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).urlToImage}" />
+                    
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+
+            <androidx.core.widget.NestedScrollView
+                    android:background="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                            android:padding="20dp"
+                            android:textSize="20dp"
+                            tools:text="fdsfsdfsfsdfsdfsdfsdfsdfsdfdsfsdfdsfsdffdf"
+                            android:text="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).description}"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+
+            </androidx.core.widget.NestedScrollView>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="invisible"
+                android:id="@+id/viewTop"
+                android:background="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
