--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -15,8 +15,6 @@
             tools:context=".ui.newsdetails.presenter.NewsDetailActivity">
 
 
-
-
         <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -29,6 +27,7 @@
                     android:fitsSystemWindows="true"
                     android:theme="@style/AppTheme.AppBarOverlay">
 
+
                 <com.google.android.material.appbar.CollapsingToolbarLayout
                         android:id="@+id/collapsing_toolbar"
                         android:layout_width="match_parent"
@@ -37,8 +36,6 @@
                         app:contentScrim="@color/colorAccent"
                         app:expandedTitleGravity="bottom"
                         app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-
-
 
 
 
@@ -52,7 +49,10 @@
                             android:fitsSystemWindows="true"
                             android:scaleType="fitXY"
                             android:img="@{newsViewModel.getNews(newsViewModel.newsPositionSelected).urlToImage}" />
-                    
+
+
+
+
 
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -194,12 +194,46 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:visibility="invisible"
-                android:id="@+id/viewTop"
-                android:background="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize">
+                android:layout_height="90dp">
+
+
+            <RelativeLayout
+                    android:layout_marginLeft="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                <ImageView
+                        android:id="@+id/imgFrameBack"
+                        android:layout_centerInParent="true"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                    android:background="@drawable/middle_background"/>
+
+
+                <ImageButton
+                        android:id="@+id/btnBack"
+                        android:layout_centerInParent="true"
+                        android:padding="5dp"
+                        android:background="?selectableItemBackground"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_back"/>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                    android:visibility="invisible"
+                    android:background="@color/white"
+                    android:id="@+id/viewTop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
