--- a/app/src/main/res/navigation/vmnavigation.xml
+++ b/app/src/main/res/navigation/vmnavigation.xml
@@ -14,6 +14,9 @@
         <action
                 android:id="@+id/action_homeFragment2_to_mapFragment"
                 app:destination="@id/mapFragment" />
+        <action
+                android:id="@+id/action_homeFragment2_to_productFragment"
+                app:destination="@id/productFragment" />
     </fragment>
     <fragment
             android:id="@+id/productFragment"
@@ -24,7 +27,13 @@
             android:id="@+id/mapFragment"
             android:name="com.mobile.tr.poc.koin.vm.map.MapFragment"
             android:label="fragment_map"
-            tools:layout="@layout/fragment_map" />
+            tools:layout="@layout/fragment_map" >
+        <action
+                android:id="@+id/action_mapFragment_to_settingsFragment2"
+                app:destination="@id/settingsFragment"
+                app:popUpTo="@id/mapFragment"
+                app:popUpToInclusive="true" />
+    </fragment>
     <fragment
             android:id="@+id/settingsFragment"
             android:name="com.mobile.tr.poc.koin.vm.settings.SettingsFragment"
